smartbox/fhir-app-portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fhir-app-portal
  labels:
    app: fhir-app-portal
    environment: production
